kubernetes/admission-create.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
  - name: test
    image: abdullahedhii/opentel-demo-project:frontend-image
    command: ["sleep", "3600"]
  imagePullSecrets:
  - name: regcred
