kubernetes/backend.yaml
# Updated Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: abdullahedhii/opentel-demo-project:backend-image
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
            - containerPort: 2222
          volumeMounts:
            - name: shared-log
              mountPath: /fluentd/log
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: shared-logs-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
    - protocol: TCP
      name: metrics
      port: 2222
      targetPort: 2222
  type: ClusterIP

---
