kubernetes/fluentd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd:v1.16-debian
          command: ["/bin/sh", "-c", "/wait-for-es.sh"]
          ports:
            - containerPort: 24224
            - containerPort: 24224
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /fluentd/etc/
            - name: script
              mountPath: /wait-for-es.sh
              subPath: wait-for-es.sh
            - name: log
              mountPath: /fluentd/log
      volumes:
        - name: config
          configMap:
            name: fluentd-config
            items:
              - key: fluent.conf
                path: fluent.conf
        - name: script
          configMap:
            name: fluentd-config
            defaultMode: 0775
        - name: log
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: fluentd-service
spec:
  selector:
    app: fluentd
  ports:
    - port: 24224
      targetPort: 24224
