kubernetes/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.13.4 
          ports:
            - containerPort: 5601
          resources: 
            limits:
              memory: "1Gi" 
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts: 
            - name: config-volume
              mountPath: /usr/share/kibana/config/kibana.yml 
              subPath: kibana.yml 
            - name: es-ca-cert
              mountPath: /usr/share/kibana/config/certs
              readOnly: true
      volumes: 
        - name: config-volume
          configMap:
            name: kibana-config 
        - name: es-ca-cert
          secret:
            secretName: es-ca-cert

---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: default
  labels:
    app: kibana 
spec:
  selector:
    app: kibana 
  ports:
    - protocol: TCP
      name: http 
      port: 5601 
      targetPort: 5601 
  type: ClusterIP
