kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /elasticsearch(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: elasticsearch-service
                port:
                  number: 9200
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /kibana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /jaeger(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jaeger-service
                port:
                  number: 16686
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 6600
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
    - host: monitoring.127.0.0.1.sslip.io
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
